--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-number-picker": "^0.8.8",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "mydatepicker": "^2.6.6",
     "ng2-numeric-input": "0.0.10",
     "ngx-bootstrap": "^3.0.1",
